--- a/admin/partials/interfaces/ExternalMappings/adExternalMappingsAdd.html
+++ b/admin/partials/interfaces/ExternalMappings/adExternalMappingsAdd.html
@@ -36,6 +36,7 @@
             </fieldset>
             <fieldset class="holder left">
                 <ad-dropdown-name savemodel="mapping.snt_value"
+                                  ng-if="sntValues.length > 0"
                                   valueproperty="description"
                                   property="name"
                                   label-in-drop-down="Select Value"
@@ -43,9 +44,24 @@
                                   label="{{'SNT_VALUE'| translate}}"
                                   div-class="full-width">
                 </ad-dropdown-name>
+                <ad-textbox inputtype="text"
+                            ng-if="sntValues.length === 0"
+                            value="mapping.snt_value"
+                            label="{{'SNT_VALUE'| translate}}"
+                            styleclass="full-width"></ad-textbox>
             </fieldset>
             <fieldset class="holder right">
+                <ad-dropdown-name savemodel="mapping.ext_value"
+                                  ng-if="extValues.length > 0"
+                                  valueproperty="description"
+                                  property="name"
+                                  label-in-drop-down="Select Value"
+                                  list="extValues"
+                                  label="{{'EXTERNAL_VALUE'| translate}}"
+                                  div-class="full-width">
+                </ad-dropdown-name>
                 <ad-textbox inputtype="text"
+                            ng-if="extValues.length === 0"
                             value="mapping.ext_value"
                             label="{{'EXTERNAL_VALUE'| translate}}"
                             styleclass="full-width"></ad-textbox>
