CICO-31110 updates to angularjs directive for more-generic use added ng-if and removed unnecessary no-tip class

--- a/admin/partials/zestStation/adZestStationCfg.html
+++ b/admin/partials/zestStation/adZestStationCfg.html
@@ -138,7 +138,7 @@
                     </label>
                 </div>
 
-                <ad-toggle-button ng-show="zestSettings.zest_printer_option === 'STAR_TAC'" is-checked="zestSettings.kiosk_use_socket_print" label="{{'USE_SOCKET_PRINTING'| translate}}" div-class="full-width" description='turn this ON if Station is being run on a Windows-touchscreen computer, not a Tablet device'></ad-toggle-button>
+                <ad-toggle-button ng-show="zestSettings.zest_printer_option === 'STAR_TAC'" is-checked="zestSettings.kiosk_use_socket_print" label="{{'USE_SOCKET_PRINTING'| translate}}" div-class="full-width" description="{{'USE_SOCKET_PRINTING_DESC'| translate}}"></ad-toggle-button>
 
                 <br>
             </fieldset>
