CICO-35696 Fixed wrong mapping of value and description

--- a/admin/partials/interfaces/ExternalMappings/adExternalMappingsAdd.html
+++ b/admin/partials/interfaces/ExternalMappings/adExternalMappingsAdd.html
@@ -37,8 +37,8 @@
             <fieldset class="holder left">
                 <ad-dropdown-name savemodel="mapping.snt_value"
                                   ng-if="sntValues.length > 0"
-                                  valueproperty="description"
-                                  property="name"
+                                  valueproperty="name"
+                                  property="description"
                                   label-in-drop-down="Select Value"
                                   list="sntValues"
                                   label="{{'SNT_VALUE'| translate}}"
@@ -53,8 +53,8 @@
             <fieldset class="holder right">
                 <ad-dropdown-name savemodel="mapping.ext_value"
                                   ng-if="extValues.length > 0"
-                                  valueproperty="description"
-                                  property="name"
+                                  valueproperty="name"
+                                  property="description"
                                   label-in-drop-down="Select Value"
                                   list="extValues"
                                   label="{{'EXTERNAL_VALUE'| translate}}"
