--- a/admin/partials/interfaces/ExternalMappings/adExternalMappingsEdit.html
+++ b/admin/partials/interfaces/ExternalMappings/adExternalMappingsEdit.html
@@ -28,8 +28,8 @@
                 <ad-dropdown-name savemodel="mapping.snt_value"
                                   is-disabled="true"
                                   label-in-drop-down="Select Value"
-                                  valueproperty="description"
-                                  property="name"
+                                  valueproperty="name"
+                                  property="description"
                                   list="sntValues"
                                   label="{{'SNT_VALUE'| translate}}"
                                   div-class="full-width">
@@ -43,8 +43,8 @@
             <fieldset class="holder right">
                 <ad-dropdown-name savemodel="mapping.ext_value"
                                   ng-if="extValues.length > 0"
-                                  valueproperty="description"
-                                  property="name"
+                                  valueproperty="name"
+                                  property="description"
                                   label-in-drop-down="Select Value"
                                   list="extValues"
                                   label="{{'EXTERNAL_VALUE'| translate}}"
