CICO-29735 updated No key delivery key name

--- a/admin/partials/roomKeyDelivery/roomKeyDelivery.html
+++ b/admin/partials/roomKeyDelivery/roomKeyDelivery.html
@@ -71,9 +71,9 @@
 								{{'USE_MOBILE_PHONE_KEY' | translate }}
 							</label>
 
-							<label class="radio" ng-class="{checked: data.room_key_delivery_for_rover_check_in == 'no_key_encode'}">
-								<span class="icon-form icon-radio" ng-class="{checked: data.room_key_delivery_for_rover_check_in == 'no_key_encode'}"></span>
-								<input ng-model="data.room_key_delivery_for_rover_check_in" type="radio" value="no_key_encode" name="guest-zest" id="type4" class="change-data">
+							<label class="radio" ng-class="{checked: data.room_key_delivery_for_rover_check_in == 'no_key_delivery'}">
+								<span class="icon-form icon-radio" ng-class="{checked: data.room_key_delivery_for_rover_check_in == 'no_key_delivery'}"></span>
+								<input ng-model="data.room_key_delivery_for_rover_check_in" type="radio" value="no_key_delivery" name="guest-zest" id="type4" class="change-data">
 								No Key Delivery
 							</label>
 
