--- a/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReport.html
+++ b/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReport.html
@@ -16,7 +16,7 @@
                     <th colspan="2" class="date"><span class="sort" ng-class="{ 'sorting-asc': !!chosenReport.sortByOptions[0] && chosenReport.sortByOptions[0]['sortDir'] === true, 'sorting-desc': !!chosenReport.sortByOptions[0] && chosenReport.sortByOptions[0]['sortDir'] === false }" ng-click="sortResultBy(chosenReport.sortByOptions[0])">Date</span></th>
                     <th colspan="1" class="break">Individual</th>
                     <th colspan="1" class="break">Group/Allotments</th>
-                    <th colspan="2" class="break">Rooms Total</th>
+                    <th colspan="3" class="break">Rooms Total</th>
                     <th colspan="2" class="break">Rooms %</th>
                     <th colspan="3" class="break">Revenue</th>
                     <th colspan="2">Last Year</th>
@@ -27,7 +27,8 @@
                     <th class="break">Occupied</th>
                     <th class="break">Occupied</th>
                     <th>Occupied</th>
-                    <th class="break">Available</th>
+                    <th>Available</th>
+                    <th class="break">Sold</th>
                     <th>Occupied</th>
                     <th class="break">Available</th>
                     <th>Revenue</th>
