--- a/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReport.html
+++ b/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReport.html
@@ -10,7 +10,7 @@
 <!-- Report content -->
 <div id="report-content" class="report-content scrollable" ng-hide="hasNoResults" ng-class="{ 'with-pagination': (!disablePrevBtn || !disableNextBtn) }" ng-iscroll="report-details-scroll">
     <div class="wrapper">
-        <table class="large-grid forecast-reports">
+        <table class="forecast-reports large-grid forecast-group">
             <thead>
                 <tr class="top-row">
                     <th colspan="2" class="date"><span class="sort" ng-class="{ 'sorting-asc': !!chosenReport.sortByOptions[0] && chosenReport.sortByOptions[0]['sortDir'] === true, 'sorting-desc': !!chosenReport.sortByOptions[0] && chosenReport.sortByOptions[0]['sortDir'] === false }" ng-click="sortResultBy(chosenReport.sortByOptions[0])">Date</span></th>
@@ -38,7 +38,7 @@
                     <th>Variance</th>
                 </tr>
             </thead>
-            
+
             <!-- Reports table footer -->
             <tfoot ng-include="'/assets/partials/reports/shared/rvReportDetailsFooter.html'"></tfoot>
 
