--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -290,6 +290,20 @@
 /* 5. COMPONENTS
 ==========================================================*/
 
+/* Action Manager ========================================*/
+    
+    /* Hide Content */
+    .actions-content {
+        .content-left,
+        .content-right {
+            .hide();
+        }
+    }
+
+    .post-form {
+        .hide();
+    }
+
 /* Availability             ==============================*/
     
     /* Hide everything except availability ***/
