--- a/rover/partials/nightlyDiary/rvNightlyDiaryFilterbarSearch.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryFilterbarSearch.html
@@ -29,9 +29,9 @@
 
                                 <span class="icons icon-guest-travelagent" ng-if="escapeNull(row.travel_agent)!==''" ng-bind-html="escapeNull(row.travel_agent)|highlight:textInQueryBox:false"></span>
 
-                                <span class="icons icon-guest-group" ng-if="escapeNull(row.group)!==''" ng-bind-html="escapeNull(row.group)|highlight:textInQueryBox:false"></span>
+                                <span class="icons icon-group" ng-if="escapeNull(row.group)!==''" ng-bind-html="escapeNull(row.group)|highlight:textInQueryBox:false"></span>
 
-                                <span class="icons icon-guest-allotment" ng-if="escapeNull(row.allotment)!==''" ng-bind-html="escapeNull(row.allotment)|highlight:textInQueryBox:false"></span>
+                                <span class="icons icon-allotment" ng-if="escapeNull(row.allotment)!==''" ng-bind-html="escapeNull(row.allotment)|highlight:textInQueryBox:false"></span>
                             </div>
                         </div>
                         <div class="arrival" ng-show = "row.reservation_status === 'RESERVED'">
