CICO-34409 Added new directive for replace additional div from dom while ng-include

--- a/rover/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html
@@ -21,7 +21,7 @@
         </button>
     </div>
 
-    <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryFilterbarSearch.html'"></div>
+    <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryFilterbarSearch.html'" include-replace></div>
 
     <!-- 7 or 21 Days -->
     <div class="entry switch">
