CICO-35887 Changed hewing font to custom one

--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -48,3 +48,11 @@ font-family: 'Source Sans Pro';
 	font-weight: 700;
 	font-style: normal;
 }
+
+@font-face {
+font-family: 'Avenir Light';
+	src: url('/assets/type/avenir/AvenirLT-Light.eot');
+	src: url('/assets/type/avenir/AvenirLT-Light.eot?#iefix') format('embedded-opentype'), url('/assets/type/avenir/AvenirLT-Light.woff') format('woff'), url('/assets/type/avenir/AvenirLT-Light.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
