--- a/guestweb/common_css/hewing/theme.less
+++ b/guestweb/common_css/hewing/theme.less
@@ -1,12 +1,14 @@
 /*------------------------------- Themes ----------------------------------------------------*/
 
 @import "../style.less";
+
 html,body{
   height:auto !important;
   min-height:100% !important;
 }
 body{
-     background-color: #10263f;
+  background-color: #10263f;
+  font-family: 'Avenir Light';
 }
 .back-text{
     color:#fff !important;
