CICO-35105 changed privacy policy

--- a/guestweb/common_css/hive/theme.less
+++ b/guestweb/common_css/hive/theme.less
@@ -1,12 +1,15 @@
 /*------------------------------- Themes ----------------------------------------------------*/
 
 @import "../style.less";
+
 html,body{
   height:auto !important;
   min-height:100% !important;
 }
 body{
      background-color: #F6F6F6;
+     /*font-family:Gotham Rounded A ;*/
+
 }
 .back-text{
     color:#fff !important;
@@ -108,7 +111,12 @@ a,a:hover,.main-text,
 textarea.sub-text, textarea.sub-text:hover{
   color:#5d4f45 !important;
 }
-
+.input-field {
+    background-color: white;
+}
+.calendar-button{
+background-color: white !important;
+}
 /*----------------- date picker -------------------------*/
 
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
