--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwPhoneNumberUpdate.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwPhoneNumberUpdate.html
@@ -60,7 +60,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4 top-spacing sm-no-top-spacing section-container mob-padding-bottom-10">
             <div class="col-md-12 top-spacing section-container mob-padding-bottom-10">
-                <p class="main-text"> Mobile Phone NUmber Updated</p>
+                <p class="main-text"> Mobile Phone Number Updated</p>
                 <p class="sub-main-text"> We updated your Guest profile to include this mobile phone number : {{dial}}-{{guestDetails.mobile}}</p>
             </div>
             <a class="btn btn-template margin-top-10" ng-click="continueClicked()">Continue</a>
