--- a/guestweb/common_css/hive/theme.less
+++ b/guestweb/common_css/hive/theme.less
@@ -1,255 +1,366 @@
 /*------------------------------- Themes ----------------------------------------------------*/
 
 @import "../style.less";
+@font-face {
+    font-family: 'Gotham Light';
+    src: url('/assets/type/GothamLight.eot');
+    src: url('/assets/type/GothamLight.eot?#iefix') format('embedded-opentype'), url('/assets/type/GothamLight.woff') format('woff'), url('//assets/type/GothamLight.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
 
-html,body{
-  height:auto !important;
-  min-height:100% !important;
+html,
+body {
+    height: auto !important;
+    min-height: 100% !important;
 }
-body{
-     background-color: #F6F6F6;
-     /*font-family:Gotham Rounded A ;*/
 
+body {
+    background-color: #F6F6F6;
+    font-family: Gotham Light;
 }
-.back-text{
-    color:#fff !important;
+
+.back-text {
+    color: #fff !important;
 }
-a,a:hover,.main-text,
+
+a,
+a:hover,
+.main-text,
 .res-date,
-.footer-sub-text,.footer-sub-text:hover,.phone-label{
-    color:#000;
+.footer-sub-text,
+.footer-sub-text:hover,
+.phone-label {
+    color: #000;
 }
-.sub-main-text{
-    color:#6F6F6F;
+.footer-sub-text, .footer-sub-text:hover {
+    font-size: 15px!important;
 }
-.header-bar{
-   background-color:#fff;
+.main-text {
+    font-size: 34px;
 }
-.template-text,.footer-text,
-.balance-amount,.phone-text,
-.phone-text:hover,.request-text,
+
+.sub-main-text {
+    color: #6F6F6F;
+}
+
+.header-bar {
+    background-color: #fff;
+}
+
+.template-text,
+.footer-text,
+.balance-amount,
+.phone-text,
+.phone-text:hover,
+.request-text,
 .error-text {
     color: #000 !important;
 }
-.view-bill{
+
+.view-bill {
     color: #F9BF02;
 }
-.sub-text,.sub-text:hover,.query-text,.query-text:hover,.light-text{
+
+.sub-text,
+.sub-text:hover,
+.query-text,
+.query-text:hover,
+.light-text {
     color: #6F6F6F !important;
 }
-.btn,.btn:hover, .btn:focus{
+
+.btn,
+.btn:hover,
+.btn:focus {
     background: #F9BF02;
     color: #000;
 }
-.dual-button{
-  font-size:25px;
-  font-weight:300;
+
+.dual-button {
+    font-size: 25px;
+    font-weight: 300;
 }
-.btn-template{
-  font-size:33px;
-  font-weight:300;
-  padding:4%;
+
+.btn-template {
+    font-size: 33px;
+    font-weight: 300;
+    padding: 4%;
 }
-.dark-button,.dark-button:hover{
-    background:  #F9BF02 ;
-}
-.light-button,.light-button:hover{
-    background: #FAD14A ;
-}
-.checkouttime1,.checkouttime1:hover{
-    background: #FAD14A;
-}
-.checkouttime2,.checkouttime2:hover{
-    background:  #F9BF02;
-}
-.checkouttime3,.checkouttime3:hover{
+
+.dark-button,
+.dark-button:hover {
     background: #F9BF02;
 }
-.no-thanks,.no-thanks:hover{
-    color:#B3AFAD !important;
+
+.light-button,
+.light-button:hover {
+    background: #FAD14A;
+}
+
+.checkouttime1,
+.checkouttime1:hover {
+    background: #FAD14A;
+}
+
+.checkouttime2,
+.checkouttime2:hover {
+    background: #F9BF02;
+}
+
+.checkouttime3,
+.checkouttime3:hover {
+    background: #F9BF02;
+}
+
+.no-thanks,
+.no-thanks:hover {
+    color: #B3AFAD !important;
     text-decoration: underline;
-    text-transform:none;
+    text-transform: none;
 }
-.strong-font{
-  font-weight:500;
+
+.strong-font {
+    font-weight: 500;
 }
-.amount,.time{
-  font-size:30px;
-  line-height:1.2;
+
+.amount,
+.time {
+    font-size: 30px;
+    line-height: 1.2;
 }
-.down-arrow-button{
-    background-image:url('/assets/guestweb/common_images/black/down_arrow.png'); 
+
+.down-arrow-button {
+    background-image: url('/assets/guestweb/common_images/black/down_arrow.png');
 }
-.right-arrow-button{
-    background-image:url('/assets/guestweb/common_images/black/right_arrow.png'); 
+
+.right-arrow-button {
+    background-image: url('/assets/guestweb/common_images/black/right_arrow.png');
 }
+
 .checkout-icon {
     background-image: url('/assets/guestweb/common_images/checkout-now-black.png');
 }
+
 .late-checkout-icon {
     background-image: url('/assets/guestweb/common_images/late-checkout-black.png');
 }
+
 .circle-bg {
     background: url('/assets/guestweb/common_images/black/circle-bg.png') center top no-repeat;
 }
+
 .accept-charge-icon {
     background-image: url('/assets/guestweb/common_images/black/creditcard_icon.png');
 }
+
 .upgrade-details .upgrades-btn {
-    background: #F9BF02; 
+    background: #F9BF02;
     p {
-      color: #fff;
+        color: #fff;
     }
 }
+
 .proceed-to-checkin {
-      background: #F9BF02;
-      color: #fff;
+    background: #F9BF02;
+    color: #fff;
 }
-.upgrades-label{
-    color:#BA7A55;
+
+.upgrades-label {
+    color: #BA7A55;
 }
-textarea.sub-text, textarea.sub-text:hover{
-  color:#5d4f45 !important;
+
+textarea.sub-text,
+textarea.sub-text:hover {
+    color: #5d4f45 !important;
 }
+
 .input-field {
     background-color: white;
 }
-.calendar-button{
-background-color: white !important;
+
+.calendar-button {
+    background-color: #fff!important;
+    font-size: 18px;
 }
+
+
 /*----------------- date picker -------------------------*/
-
+.pickadate {
+    font-family: Gotham Light ;
+}
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
-  color: #363634;
-  color: transparent;
+    color: #363634;
+    color: transparent;
 }
 
-.pickadate-cell .pickadate-enabled ,.pickadate-centered-heading{
-  color: #000 !important;
+.pickadate-cell .pickadate-enabled,
+.pickadate-centered-heading {
+    color: #000 !important;
 }
 
 .pickadate-cell .pickadate-active {
-  background-color: #F9BF02 !important;
-  color:#fff !important;
+    background-color: #F9BF02 !important;
+    color: #fff !important;
 }
-.pickadate-head{
-    color:#000000;
+
+.pickadate-head {
+    color: #000000;
 }
+
 .calendar-selection {
     color: #000;
 }
+
 .pickadate-cell li:nth-child(1),
 .pickadate-cell li:nth-child(8),
 .pickadate-cell li:nth-child(15),
 .pickadate-cell li:nth-child(22),
 .pickadate-cell li:nth-child(29),
 .pickadate-cell li:nth-child(36) {
-  border-left: 1px solid #fff;
+    border-left: 1px solid #fff;
 }
 
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-enabled,
 .pickadate-cell .pickadate-outofrange-disabled {
-  background-color: #E5E5E5;
+    background-color: #E5E5E5;
 }
 
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-disabled a {
-  color: #ac9557;
+    color: #ac9557;
 }
-
 
 .pickadate-cell li {
-  border: 1px solid #fff;
+    border: 1px solid #fff;
 }
-.pickadate a:visited, .pickadate a {
-  color: #666666;
+
+.pickadate a:visited,
+.pickadate a {
+    color: #666666;
 }
-.date-picker-header{
-  background-color: #fff;
+
+.date-picker-header {
+    background-color: #fff;
 }
+
 .calendar-selection {
-  div {
-    color: #000;
-  }
+    div {
+        color: #000;
+    }
 }
+
 .calendar-back {
-  background-image: url('/assets/guestweb/common_images/black/back_icon.png');
+    background-image: url('/assets/guestweb/common_images/black/back_icon.png');
 }
-.calendar-done{
-   background-image: url('/assets/guestweb/common_images/black/done_black.png');
+
+.calendar-done {
+    background-image: url('/assets/guestweb/common_images/black/done_black.png');
 }
+
 .back-to-checkout {
     background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
     height: 36px;
 }
-.pickadate-prev,.pickadate-next,.pickadate-prev:hover,.pickadate-next:hover{
-  color:#F9BF02 !important;
+
+.pickadate-prev,
+.pickadate-next,
+.pickadate-prev:hover,
+.pickadate-next:hover {
+    color: #F9BF02 !important;
 }
-.green-button, .green-button:hover {
+
+.green-button,
+.green-button:hover {
     color: #fff;
 }
-.grey-terms-button, .grey-terms-button:hover {
+
+.grey-terms-button,
+.grey-terms-button:hover {
     color: #fff;
 }
+
 .date-picker-wrap {
-  background-color: #EEECE2 !important;
+    background-color: #EEECE2 !important;
 }
+
 .date-picker-bg {
-  background: unset;
+    background: unset;
 }
-.horizontal-line-sep-mobile{
-  border-top: 1px solid #9b9b9b;
+
+.horizontal-line-sep-mobile {
+    border-top: 1px solid #9b9b9b;
 }
-.departure-date{
-  color:#000;
+
+.departure-date {
+    color: #000;
 }
-.date-text{
-  color:#000;
+
+.date-text {
+    color: #000;
 }
-.res-details-heading,.res-details-heading:hover{
-    font-size:18px !important;
+
+.res-details-heading,
+.res-details-heading:hover {
+    font-size: 18px !important;
     color: #F9BF02;
 }
+
 .logo-image {
-        /*margin: 3% 0px !important;*/
-    }
+    /*margin: 3% 0px !important;*/
+}
+
 @media (max-width: 990px) {
     .logo-image {
         /*margin: 9% auto 7%;*/
         /*max-width: 0px;*/
     }
-    .back-to-checkout{
-        display:none;
+    .back-to-checkout {
+        display: none;
     }
     .hide-in-desktop {
-       display: block;
+        display: block;
     }
 }
-@media (min-width: 990px){
-   .dual-button{
-     font-size:35px;
-    }
-}
-@media (max-width: 480px){
-  .main-text{
-    font-size:11vw;
-  }
-  .container{
-    width:100%;
-  }
-  .sub-main-text{
-     font-size:5.4vw !important;
-  }
-  .footer-text{
-     font-size:5.3vw;
-  }
-  .logo-image {
-     max-width: 198px;
-     margin:0px;
-  }
-  .dual-button{
-    font-size:32px;
-  }
 
+@media (min-width: 990px) {
+    .sub-text {
+        font-size: 16px!important;
+    }
+    .sub-main-text {
+        font-size: 20px!important;
+    }
+    .dual-button {
+        font-size: 35px;
+    }
+    .main-text {
+        font-size: 34px;
+    }
+    .checkout-alone-button {
+        float: left;
+        margin-right: 1px;
+    }
+}
+
+@media (max-width: 480px) {
+    .main-text {
+        font-size: 9vw;
+    }
+    .container {
+        width: 100%;
+    }
+    .sub-main-text {
+        font-size: 4.4vw !important;
+    }
+    .footer-text {
+        font-size: 5.3vw;
+    }
+    .logo-image {
+        max-width: 198px;
+        margin: 0px;
+    }
+    .dual-button {
+        font-size: 32px;
+    }
 }
