CICO-35105 dtyle changes

--- a/guestweb/common_css/hive/theme.less
+++ b/guestweb/common_css/hive/theme.less
@@ -21,7 +21,7 @@ body {
 }
 
 .back-text {
-    color: #fff !important;
+    color: #000 !important;
 }
 
 a,
@@ -60,6 +60,7 @@ a:hover,
 
 .view-bill {
     color: #F9BF02;
+    font-size: 16px;
 }
 
 .sub-text,
@@ -83,11 +84,10 @@ a:hover,
 }
 
 .btn-template {
-    font-size: 33px;
+    font-size: 26px;
     font-weight: 300;
     padding: 4%;
 }
-
 .dark-button,
 .dark-button:hover {
     background: #F9BF02;
@@ -100,12 +100,12 @@ a:hover,
 
 .checkouttime1,
 .checkouttime1:hover {
-    background: #FAD14A;
+    background: #F7D874;
 }
 
 .checkouttime2,
 .checkouttime2:hover {
-    background: #F9BF02;
+    background: #FAD14A;
 }
 
 .checkouttime3,
@@ -160,7 +160,11 @@ a:hover,
         color: #fff;
     }
 }
-
+.checkout-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .proceed-to-checkin {
     background: #F9BF02;
     color: #fff;
