CICO-34732 Corrected the label

--- a/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReportRow.html
+++ b/rover/partials/reports/forecastGuestGroupReport/rvForecastGuestGroupReportRow.html
@@ -90,7 +90,7 @@
 			<strong>{{ each.adr_guest | currency:currencySymbol:2 }}<em>(Gst.)</em></strong>
 		</div>
 		<div class="row">
-			<strong>{{ each.adr_group | currency:currencySymbol:2 }}<em>(Gst.)</em></strong>
+			<strong>{{ each.adr_group | currency:currencySymbol:2 }}<em>(Grp.)</em></strong>
 		</div>
 		<div class="row">
 			<strong>{{ each.adr | currency:currencySymbol:2 }}<em>(Tot.)</em></strong>
