--- a/rover/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearchResult.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearchResult.html
@@ -1,7 +1,9 @@
-<div class="wrapper">
-	<div class="room" ng-repeat="row in diaryData.roomNumberSearchResults" ng-click="gotoSelectedRoom(row)">
-		<span ng-class='(row.service_status === "IN_SERVICE") ? "room-number "+row.hk_status : "room-number out"' ng-bind-html="row.room_no | highlight:diaryData.textInQueryBox:false">
-		</span>
-		<span class="room-type">{{row.room_type_name}}</span>
+ <div class="grid-room-search-results scrollable"  ng-iscroll="roomSearchResultList" ng-iscroll-delay="1000" ng-show="diaryData.showSearchResultsArea" ng-class="{'visible': diaryData.showSearchResultsArea}"  ng-controller="rvNightlyDiaryRoomNumberSearchResultController">
+	<div class="wrapper">
+		<div class="room" ng-repeat="row in diaryData.roomNumberSearchResults" ng-click="gotoSelectedRoom(row)">
+			<span ng-class='(row.service_status === "IN_SERVICE") ? "room-number "+row.hk_status : "room-number out"' ng-bind-html="row.room_no | highlight:diaryData.textInQueryBox:false">
+			</span>
+			<span class="room-type">{{row.room_type_name}}</span>
+		</div>
 	</div>
 </div>
