admin-lang-UI-update

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -232,6 +232,10 @@
   left: 101%;
   width: 25px;
   background-position: 2px -1745px !important;
+  &.right{
+    left: 112%;
+    background-position: 2px -42px !important;
+  }
 }
 .download-link-txt{
   position: relative;
@@ -242,6 +246,12 @@
 .sation-lang-download-popup{
   padding: 32px;
 }
+.language-editor>div.ngdialog-content{
+  width: 75% !important;
+  height: 105%;
+  overflow: hidden;
+}
+
 .first-letter-capitalize {
   text-transform: capitalize;
 }
