--- a/admin/partials/zestStation/adZestStationCfg.html
+++ b/admin/partials/zestStation/adZestStationCfg.html
@@ -37,7 +37,9 @@
                             <span class="input" ng-show="!hasFileUpdatedOrUploading('english')">Choose file..</span>
                             <input type="file" ng-model="zestSettings.zest_lang.english_translations_file" accept="*" app-filereader emit-data="english_translations_file" />
                             <button type="button" class="button brand-colors">Attach file</button>
-                            <button type="button" ng-show="hasFileUpdatedOrUploading('english')" class="button download-arrow icons icon-download" ng-click="downloadLang('en')"></button>
+                            <button type="button" ng-show="hasFileUpdatedOrUploading('english')" class="button download-arrow icons " ng-click="downloadLang('en')"></button>
+                            <button type="button" ng-show="hasFileUpdatedOrUploading('english')" class="button download-arrow icons right " ng-click="editLang('en')"></button>
+
                         </div>
                     </div>
                 </div>
@@ -51,7 +53,7 @@
                             <input type="file" ng-model="zestSettings.zest_lang.french_translations_file" accept="*" app-filereader emit-data="french_translations_file" />
                             
                             <button type="button" class="button brand-colors">Attach file</button>
-                            <button type="button" class="button download-arrow icons icon-download" ng-click="downloadLang('fr')" ng-show="hasFileUpdatedOrUploading('french')"></button>
+                            <button type="button" class="button download-arrow icons " ng-click="downloadLang('fr')" ng-show="hasFileUpdatedOrUploading('french')"></button>
                         </div>
                     </div>
                 </div>
@@ -65,7 +67,7 @@
                             <input type="file" ng-model="zestSettings.zest_lang.spanish_translations_file" accept="*" app-filereader emit-data="spanish_translations_file" />
                             
                             <button type="button" class="button brand-colors">Attach file</button>
-                            <button type="button" class="button download-arrow icons icon-download" ng-click="downloadLang('es')" ng-show="hasFileUpdatedOrUploading('spanish')"></button>
+                            <button type="button" class="button download-arrow icons " ng-click="downloadLang('es')" ng-show="hasFileUpdatedOrUploading('spanish')"></button>
                         </div>
                     </div>
                 </div>
@@ -79,7 +81,7 @@
                             <input type="file" ng-model="zestSettings.zest_lang.german_translations_file" accept="*" app-filereader emit-data="german_translations_file" />
                             
                             <button type="button" class="button brand-colors">Attach file</button>
-                            <button type="button" class="button download-arrow icons icon-download" ng-click="downloadLang('de')" ng-show="hasFileUpdatedOrUploading('german')"></button>
+                            <button type="button" class="button download-arrow icons " ng-click="downloadLang('de')" ng-show="hasFileUpdatedOrUploading('german')"></button>
                         </div>
                     </div>
                 </div>
@@ -93,7 +95,7 @@
                             <input type="file" ng-model="zestSettings.zest_lang.italian_translations_file" accept="*" app-filereader emit-data="italian_translations_file" />
                             
                             <button type="button" class="button brand-colors">Attach file</button>
-                            <button  type="button" class="button download-arrow icons icon-download" ng-click="downloadLang('it')" ng-show="hasFileUpdatedOrUploading('italian')"></button>
+                            <button  type="button" class="button download-arrow icons " ng-click="downloadLang('it')" ng-show="hasFileUpdatedOrUploading('italian')"></button>
                         </div>
                     </div>
                 </div>
@@ -107,7 +109,7 @@
                             <input type="file" ng-model="zestSettings.zest_lang.castellano_translations_file" accept="*" app-filereader emit-data="italian_translations_file" />
                             
                             <button type="button" class="button brand-colors">Attach file</button>
-                            <button type="button" class="button download-arrow icons icon-download" ng-click="downloadLang('cl')" ng-show="hasFileUpdatedOrUploading('castellano')"></button>
+                            <button type="button" class="button download-arrow icons " ng-click="downloadLang('cl')" ng-show="hasFileUpdatedOrUploading('castellano')"></button>
                         </div>
                     </div>
                 </div>
