--- a/guestweb/common_templates/partials/MGM/gwCheckinOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwCheckinOptions.html
@@ -7,7 +7,7 @@
 <!-- main section starts here -->
 <div class="container">
     <!-- request text -->
-    <div class="row" ng-show="isPosting && !netWorkError">
+    <div class="row" ng-show="isLoading && !netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
             <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
@@ -25,7 +25,7 @@
         </div>
     </div>
     <!-- main content -->
-    <div class="row" ng-hide="isPosting || netWorkError">
+    <div class="row" ng-hide="isLoading || netWorkError">
         <div class="col-md-4"></div>
         <div class="col-md-4 top-spacing section-container">
             <p class="main-text margin-top-20 ">Arrival Details</p>
