--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -1,8 +1,8 @@
 <!-- Diary header -->
 <div ng-include="'/assets/partials/common/header.html'"></div>
 
-<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html'"></div>
-<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'"></div>
+<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html'" include-replace></div>
+<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'" include-replace></div>
 
 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
 
@@ -13,9 +13,9 @@
 
             <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearch.html'" include-replace></div>
 
-            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'"></div>
+            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'" include-replace></div>
 
-            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryStayRange.html'"></div>
+            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryStayRange.html'" include-replace></div>
 
             <!-- Stay Range | Remove .hidden to show-->
             <!-- <div class="grid-stay-range hidden">
@@ -30,7 +30,7 @@
         <!-- REACT APP :: Rooms list + Reservations list + Un-assigned Reservations list -->
         <div id="nightlyDiaryMain" class="grid-wrapper"></div>
 
-        <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html'"></div>
+        <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html'" include-replace></div>
 
         <!-- Sidebar -->
         <div class="diary-nightly-sidebar hidden11">
