--- a/guestweb/common_css/hive/theme.less
+++ b/guestweb/common_css/hive/theme.less
@@ -186,8 +186,8 @@ textarea.sub-text:hover {
 .calendar-button {
     background-color: #fff!important;
     font-size: 18px;
+    background-position: 96% 13px;
 }
-
 
 /*----------------- date picker -------------------------*/
 .pickadate {
@@ -330,7 +330,7 @@ textarea.sub-text:hover {
 
 @media (min-width: 990px) {
     .sub-text {
-      font-size: 14px!important;
+        font-size: 16px!important;
     }
     .sub-main-text {
         font-size: 20px!important;
@@ -366,5 +366,8 @@ textarea.sub-text:hover {
     }
     .dual-button {
         font-size: 32px;
+    }
+    .calendar-button {
+        background-position: 96% 15px;
     }
 }
