CICO-34409 Fix for diary edit

--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -2,7 +2,7 @@
 <div ng-include="'/assets/partials/common/header.html'"></div>
 
 <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html'" include-replace></div>
-<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'" include-replace></div>
+<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'"></div>
 
 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
 
@@ -15,7 +15,7 @@
 
             <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'" include-replace></div>
 
-            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryStayRange.html'" include-replace></div>
+            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryStayRange.html'"></div>
 
             <!-- Stay Range | Remove .hidden to show-->
             <!-- <div class="grid-stay-range hidden">
