CICO-34409 , CICO-34407 - Fixed QA failed issues

--- a/rover/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html
@@ -1,4 +1,4 @@
-<div class="diary-nightly-sidebar diary-nightly-filters"> <!-- Add class 'visible' to show -->
+<div class="diary-nightly-sidebar diary-nightly-filters hidden"> <!-- Add class 'visible' to show -->
     <div class="sidebar-header">
         <h2>Filters</h2>
         <p>Select filters and press "apply"</p>
@@ -40,20 +40,5 @@
     </div>
     <div class="actions">
         <button type="button" class="button green">Apply</button>
-    </div>
-</div>
-
-<!-- Sidebar -->
-<div class="diary-nightly-sidebar hidden11">
-    <!-- Toggle Sidebar View -->
-    <div class="sidebar-options">
-        <button type="button" class="button white"> <!-- Add class 'active' when showing unassigned reservations + add class 'visible' to .diary-nightly-unassigned in sidebar-unassigned.html -->
-            <span class="count">{Count of unassigned res.}</span>
-            Unassigned
-        </button>
-        <button type="button" class="button white"> <!-- Add class 'active' when showing filters + add class 'visible' to .diary-nightly-filters in sidebar-filters.html -->
-            <span class="count">{Count of active filters}</span>
-            Filters
-        </button>
     </div>
 </div>
