--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -2,7 +2,8 @@
 <div ng-include="'/assets/partials/common/header.html'"></div>
 
 <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html'" include-replace></div>
-<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'"></div>
+
+<div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html'" include-replace></div>
 
 <div ng-include="'/assets/partials/common/notification_message.html'"></div>
 
@@ -31,20 +32,5 @@
         <div id="nightlyDiaryMain" class="grid-wrapper"></div>
 
         <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html'" include-replace></div>
-
-        <!-- Sidebar -->
-        <div class="diary-nightly-sidebar hidden11">
-            <!-- Toggle Sidebar View -->
-            <div class="sidebar-options">
-                <button type="button" class="button white"> <!-- Add class 'active' when showing unassigned reservations + add class 'visible' to .diary-nightly-unassigned in sidebar-unassigned.html -->
-                    <span class="count">{Count of unassigned res.}</span>
-                    Unassigned
-                </button>
-                <button type="button" class="button white"> <!-- Add class 'active' when showing filters + add class 'visible' to .diary-nightly-filters in sidebar-filters.html -->
-                    <span class="count">{Count of active filters}</span>
-                    Filters
-                </button>
-            </div>
-        </div>
 
 </section>
