--- a/rover/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTopFilterBar.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Show / Hide Filters -->
-    <div class="entry filters">
+    <div class="entry filters hidden">
         <button type="button" class="button white with-icon only-icon">
             <span class="count">{{diaryData.roomFilterCount}}</span>
             <span class="icons icon-filter-room"></span>
