--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -48,3 +48,11 @@ font-family: 'Source Sans Pro';
 	font-weight: 700;
 	font-style: normal;
 }
+
+@font-face {
+    font-family: 'Gotham Light';
+    src: url('/assets/type/GothamLight.eot');
+    src: url('/assets/type/GothamLight.eot?#iefix') format('embedded-opentype'), url('/assets/type/GothamLight.woff') format('woff'), url('//assets/type/GothamLight.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
